2019-02-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el: changed all intros to make them use `find-eintro'
	instead of `find-estring'.
	(find-eintro): new function.
	(ee-intro-face): new function.
	(ee-intro-fontify): new function.
	(ee-intro-fontify-maybe): new function.
	(find-wrap-intro): use `ee-tolatin1'.
	(find-anchors-intro): use `ee-tolatin1'.

	* eejump.el: changes in the comments.

	* eev-blinks.el: changes in the comments.
	(find-eface): new function.

2019-02-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-intro-dual): new function - a new hack that
	replaces `find-intro-here'.
	(find-intro-here): deleted together with its dependencies.
	(find-eev-quick-intro): small changes.
	(find-eval-intro): small changes.
	(find-links-intro): small changes.
	(find-eepitch-intro): small changes.
	(find-eejump-intro): small changes.
	(find-code-c-d-intro): small changes.

	* eev-multiwindow.el (find-wset-c): new function.

2019-01-30  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-eev-install-links): small changes.

	* eev-intro.el (find-videos-intro): small changes.
	(find-eev-intro): small changes.
	(find-eev-quick-intro): small changes.

2019-01-29  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-wrap.el (ee-wrap-pdflike): use `code-pdf-page' instead of
	`code-xpdf'.

	* eev-brxxx.el: added comments.

	* eev-load.el: new file.

	* eev-intro.el (find-eev-quick-intro): Added two new sections:
	"9.3. Hyperlinks to PDF files" and "9.4. Shorter hyperlinks to PDF
	files".

	* eev-pdflike.el: TOTAL REWRITE. The old version was renamed to
	eev-pdflike-old.el and will be deleted at some point in the
	future.
	(code-xxxpdf-family): new function.
	(code-xxxpdftext-family): new function.
	(code-xxxpdf-alias): new function.

	* eev-pdflike-old.el: new file - see above.

	* eev-rcirc.el (find-freenode-2a): new function.
	(find-freenode-links): rewrote completely.

2019-01-28  Eduardo Ochs  <eduardoochs@gmail.com>
